# food_blog

./: .gitignore  AGENTS.md  README.MD  hugo.toml  pyproject.toml
.github/workflows/: deploy.yml
archetypes/: default.md
assets/css/: style.css
content/posts/: 2025-12-09-babka.md  2025-12-09-sourdough.md  2025-12-12-babka.md  2025-12-12-sourdough.md  2025-12-13-siciliano.md  2025-12-14-sourdough.md  2025-12-17-semolina-loaf.md  2025-12-20-pompe.md  2025-12-20-sourdough.md  2025-12-27-sesame-bing.md  2025-17-12-semolina-loaf.md  2025-20-12-pompe.md  2026-01-06-gibbasier.md  2026-01-20-gibbasier.md  classic-margherita-pizza.md  garlic-butter-shrimp-pasta.md  lemon-blueberry-scones.md  spicy-thai-basil-chicken.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  search.html  single.html  terms.html
layouts/_default/_markup/: render-image.html
layouts/partials/: footer.html  header.html  post-card.html  recipe-card.html  tag-filter-script.html
layouts/posts/: list.html
tests/: test_resize_images.py
tools/: resize_images.py
