[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food-blog-tools"
version = "0.1.0"
description = "Helper tools for the food blog."
requires-python = ">=3.11"
dependencies = ["Pillow>=10.0.0"]

[project.scripts]
resize-images = "tools.resize_images:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
